cedar-policy-core/src/validator/schema/snapshots/cedar_policy_core__validator__schema__to_json__tests__entity_references.snap
---
source: cedar-policy-core/src/validator/schema/to_json.rs
expression: roundtrip_result
---
entity Document = {
  "editors": Set<User>,
  "group": Group,
  "owner": User
};

entity Group;

entity User;
