cedar-policy-core/src/validator/schema/snapshots/cedar_policy_core__validator__schema__to_json__tests__entity_with_attributes.snap
---
source: cedar-policy-core/src/validator/schema/to_json.rs
expression: roundtrip_result
---
entity User = {
  "active": __cedar::Bool,
  "age": __cedar::Long,
  "name": __cedar::String
};
