cedar-policy-core/src/validator/schema/snapshots/cedar_policy_core__validator__schema__to_json__tests__extension_types.snap
---
source: cedar-policy-core/src/validator/schema/to_json.rs
expression: roundtrip_result
---
entity User = {
  "balance": __cedar::decimal,
  "ip": __cedar::ipaddr
};
