cedar-policy-core/src/validator/schema/snapshots/cedar_policy_core__validator__schema__to_json__tests__optional_attributes.snap
---
source: cedar-policy-core/src/validator/schema/to_json.rs
expression: roundtrip_result
---
entity User = {
  "email"?: __cedar::String,
  "name": __cedar::String,
  "phone"?: __cedar::String
};
